--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -57,6 +57,7 @@ $desktop: 1440px;
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -65,6 +66,8 @@ body {
   background-color: $light-color;
   line-height: 1.6;
   overflow-x: hidden;
+  width: 100%;
+  position: relative;
 }
 
 h1, h2, h3, h4, h5, h6 {
